# torq-rs

./: .gitignore  Cargo.toml  LICENSE.md  NOTES.md  README.md
benches/: fibonacci.rs  linear_vs_binary_search.rs
examples/: README.md
src/: lib.rs
src/klvm/: instr.rs  machine.rs  mod.rs  value.rs
src/lang/: lexer.rs  mod.rs
src/lang/lexer/: tests.rs
tests/: test_lexer_sizes.rs  test_value_sizes.rs
