[package]
name = "torq_lang"
version = "0.1.0"
edition = "2021"
description = "A programming language for concurrent dataflow."
license-file = "LICENSE.md"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "linear_vs_binary_search"
harness = false

[[bench]]
name = "fibonacci"
harness = false

